--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
         </section>
         <section class="last-container">
             <div class="action">
-                <h3>Call to action! It's time!</h3>
+                <div class="text">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur, perferendis.</p>
+                </div>
                 <button class="last-button">Sign-Up</button>
             </div>
         </section>
